1.Call structure is seriously changed: program starts for list of data, represented by input file. 2. Inject query changed 3. Logback added